syntax = "proto3";

package intr.v1;
option go_package="intr/v1;intrv1";

service InteractiveService{
  rpc IncrReadCnt(IncrReadCntRequest) returns(IncrReadCntResponse);
  rpc Like(LikeRequest) returns (LikeResponse);
  // CancelLike 取消点赞
  rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  // Collect 收藏
  rpc Collect(CollectRequest) returns (CollectResponse);
  // CancelCollect 取消收藏
  rpc CancelCollect(CancelCollectRequest) returns (CancelCollectResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
  // GetCollectedBizIds 获取用户收藏的biz_id列表
  rpc GetCollectedBizIds(GetCollectedBizIdsRequest) returns (GetCollectedBizIdsResponse);
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc MarkRead(MarkReadRequest) returns (MarkReadResponse);
  rpc GetUnreadCounts(GetUnreadCountsRequest) returns (GetUnreadCountsResponse);

}

message GetResponse {
  Interactive intr =1;
}

message GetRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message GetByIdsRequest {
  string biz = 1;
  repeated int64 ids = 2;
}

message GetByIdsResponse {
  map<int64, Interactive> intrs = 1;
}
message Interactive {
  string biz = 1;
  int64 biz_id = 2;
  int64 read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool liked = 6;
  bool collected =7;
}
message IncrReadCntRequest{
  string biz = 1;
  int64 biz_id = 2;
}

message IncrReadCntResponse{
}
message CancelLikeResponse {
}

message CancelLikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}
message LikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}
message LikeResponse {

}

message CollectResponse {

}

message CollectRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
  int64 cid = 4;
}

message CancelCollectRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
  int64 cid = 4;
}

message CancelCollectResponse {
}

message GetCollectedBizIdsRequest {
  string biz = 1;
  int64 uid = 2;
  int32 offset = 3;
  int32 limit = 4;
}

message GetCollectedBizIdsResponse {
  repeated int64 biz_ids = 1;
  int64 total = 2;
}

message NotificationSender {
  int64 id = 1;
  string name = 2;
  string avatar = 3;
}

message NotificationTarget {
  string type = 1;
  int64 id = 2;
  string title = 3;
  string preview = 4;
}

message NotificationItem {
  int64 id = 1;
  string category = 2;
  string content = 3;
  string time = 4;
  NotificationSender sender = 5;
  NotificationTarget target = 6;
  string status = 7;
}

message GetNotificationsRequest {
  int64 uid = 1;
  string type = 2;
  int32 offset = 3;
  int32 limit = 4;
}

message GetNotificationsResponse {
  repeated NotificationItem items = 1;
}

message MarkReadRequest {
  int64 uid = 1;
  repeated int64 ids = 2;
  string type = 3;
}

message MarkReadResponse {}

message GetUnreadCountsRequest { int64 uid = 1; }

message GetUnreadCountsResponse {
  int32 interaction = 1;
  int32 follow = 2;
  int32 system = 3;
  int32 total = 4;
}
