syntax="proto3";

package pmt.v1;
option go_package="pmt/v1;pmtv1";


service WechatPaymentService {
  rpc NativePrePay(PrePayRequest) returns (NativePrePayResponse);
  rpc GetPayment(GetPaymentRequest) returns(GetPaymentResponse);
}
enum PaymentStatus {
  PaymentStatusUnknown = 0;
  PaymentStatusInit = 1;
  PaymentStatusSuccess = 2;
  PaymentStatusFailed = 3;
  PaymentStatusRefund = 4;
}
message Amount {
  int64 total = 1;
  string currency = 2;
}
message PrePayRequest {
  Amount amt = 1;
  string biz_trade_no = 2;
  string description = 3;
}
message NativePrePayResponse {
  string code_url = 1;
}
message GetPaymentRequest {
  string biz_trade_no = 1;
}
message GetPaymentResponse {
  PaymentStatus status = 2;
}